--- a/ambassador.html
+++ b/ambassador.html
@@ -385,7 +385,7 @@
   </div>
 </div>
 
-<!-- Slide 11 
+<!-- Slide 11  -->
 <section data-title="吉田 勝大" class="slide fade-6 kenBurns"  id="masahiro">
   <div class="content">
     <div class="container">
@@ -396,7 +396,8 @@
           <ul class="flex grid-80 fixedSpaces equal reverse">
             <li class="col-6-12">
               <div class="box-80 padding-4 equalElement left ae-3 rounded">
-                <p class="tiny ae-5"><span class="tiny opacity-8">木曾路はすべて山の中である。あるところは岨づたいに行く崖の道であり、あるところは数十間の深さに臨む木曾川の岸であり、あるところは山の尾をめぐる谷の入り口である。一筋の街道はこの深い森林地帯を貫いていた。名高い桟も、蔦のかずらを頼みにしたような危い場処ではなくなって、徳川時代の末にはすでに渡ることのできる橋であった。</span></p>
+				<p class="ae-5"><span class="opacity-8"><b>Snowcookieはスキートレーニングに最適なデバイスです</b></span></p>
+                <p class="tiny ae-5"><span class="tiny opacity-8">滑走距離やスピードはもちろんのこと、左右のスキーの角度や1ターン1ターンの質を可視化できるので、やみくもにトレーニングすることなく、目的や目標に合わせたトレーニングを行うことができます。特に基礎スキーではアルペンスキーのように旗門などの目安がないので、こうした目に見える目標を設定できることは非常に強みとなります。「自分では傾けているつもり」「今のは良いターンだ」と思っていても、実はギャップがあることも出てくると思います。そんなギャップを埋めていく作業にご使用されてみてはいかがでしょうか。</span></p>
                 <div class="margin-top-5 ae-6">
                   <h3>吉田 勝大</h3>
                   <p class="tiny opacity-8 cropBottom">Mt.石井スポーツプロスタッフ / M's Ski Salon代表, SAJデモンストレーター / プロスキーヤー</p>
@@ -404,7 +405,7 @@
               </div>
             </li>
             <li class="col-6-12">
-              <div class="videoThumbnail rounded shadow wide cover equalElement popupTrigger ae-4 padding-14" data-popup-id="80-14" style="background:url(assets/img/masa_small.JPG);"></div>
+              <div class=" rounded shadow wide cover equalElement ae-4 padding-14"  style="background:url(assets/img/B637543C-0020-474E-835C-95AFC571BC7B.JPG);"></div>
             </li>
           </ul>
         </div>
@@ -429,7 +430,7 @@
   </div>
 </div>
 
--->
+
 
 <!-- Panel Bottom -->
 <nav class="panel bottom">
@@ -443,6 +444,7 @@
       <ul class="menu uppercase trim">
         <li><a href="#ambassador">アンバサダーについて</a></li>
         <li><a href="#hirokimiku">栗山 太樹・未来</a></li>
+		<li><a href="#masahiro">吉田 勝大</a></li>
         <!--<li><a href="#masahiro">吉田 勝大</a></li>-->
         <li class="cropRight"><a href="https://www.facebook.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
         <li class="cropRight"><a href="https://twitter.com/ridesnowcookie" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
