--- a/tutorial.html
+++ b/tutorial.html
@@ -460,7 +460,7 @@
       <div class="wrap">
       
         <div class="fix-8-12">
-          <h1 class="ae-1">snowcookie support</h1>
+          <h1 class="ae-1">snowcookie Support</h1>
           <p class="ae-3 tiny"><span class="opacity-8"><a class="opacity-8" href="mailto:support@snowcookiesports.com">support@snowcookiesports.com</a></span></p>
         </div>
         
