--- a/ambassador.html
+++ b/ambassador.html
@@ -405,7 +405,7 @@
               </div>
             </li>
             <li class="col-6-12">
-              <div class=" rounded shadow wide cover equalElement ae-4 padding-14"  style="background:url(assets/img/B637543C-0020-474E-835C-95AFC571BC7B.JPG);"></div>
+              <div class=" rounded shadow wide cover equalElement ae-4 padding-14"  style="background:url(assets/img/B637543C-0020-474E-835C-95AFC571BC7B.jpg)"></div>
             </li>
           </ul>
         </div>
@@ -449,7 +449,7 @@
         <li class="cropRight"><a href="https://www.facebook.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
         <li class="cropRight"><a href="https://twitter.com/ridesnowcookie" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
         <li class="cropRight"><a href="https://www.instagram.com/snowcookiejapan" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
-        <li class="cropRight"><a href="https://www.youtube.com/channel/UCT289AMSz905O0hE7-OoOBw" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#youtube"></use></svg></a></li>
+        <li class="cropRight"><a href="https://www.youtube.com/channel/UCAxQW6jTEg52WnPJ_0Kkyew" class="trimRight" target="_blank"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#youtube"></use></svg></a></li>
       </ul>
     </div>
   </div>
