ビデオ追加

--- a/ambassador.html
+++ b/ambassador.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<q></q><!doctype html>
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -405,7 +405,7 @@
               </div>
             </li>
             <li class="col-6-12">
-              <div class=" rounded shadow wide cover equalElement ae-4 padding-14"  style="background:url(assets/img/B637543C-0020-474E-835C-95AFC571BC7B.jpg)"></div>
+              <div class="videoThumbnail rounded shadow wide cover equalElement popupTrigger ae-4 padding-14" data-popup-id="80-14" style="background:url(assets/img/B637543C-0020-474E-835C-95AFC571BC7B.jpg);"></div>
             </li>
           </ul>
         </div>
@@ -416,14 +416,14 @@
   <div class="background" style="background-image:url(assets/img/background/00ba48_8d05d32e67524b18946ac666f5b950a1_mv2_d_4566_3044_s_4_2.jpg)"></div>
 </section>
 
-
+<!-- Popup Video -->
 <div class="popup autoplay" data-popup-id="80-14">
   <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
   <div class="content">
     <div class="container">
       <div class="wrap">
           <div class="embedVideo popupContent">
-            <iframe src="https://www.youtube.com/embed/B5A_hBnheYA?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/B4yzvD6bk7I?rel=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
       </div>
     </div>
