--- a/index.html
+++ b/index.html
@@ -494,51 +494,57 @@
 
           <!-- remove class tintLogos class to disable color change of the logo images -->
           <ul class="flex grid-68 tintLogos equal equalMobile margin-top-6">
-            <li class="col-3-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-3">
                 <div class="cell"><img width="84" src="assets/img/brand-68-audi.png" alt="Audi"/>
                 </div>
               </div>
             </li>
-            <li class="col-3-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-4">
                 <div class="cell"><img width="96" src="assets/img/brand-68-redbull.png" alt="Redbull"/>
                 </div>
               </div>
             </li>
-            <li class="col-3-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-5">
                 <div class="cell"><img width="84" src="assets/img/brand-68-intel.png" alt="Intel"/>
                 </div>
               </div>
             </li>
-            <li class="col-3-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-6">
                 <div class="cell"><img width="126" src="assets/img/brand-68-ssf.png" alt="SwissStartupFactory"/>
                 </div>
               </div>
             </li>
-            <li class="col-3-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-7">
                 <div class="cell"><img width="116" src="assets/img/the_W_logo.png" alt="W hotels"/>
                 </div>
               </div>
             </li>
-            <li class="col-3-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-8">
                 <div class="cell"><img width="146" src="assets/img/nisekologo.png" alt="Niseko Grand Hirafu"/>
                 </div>
               </div>
             </li>
-            <li class="col-3-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-9">
                 <div class="cell"><img width="84" src="assets/img/galalogo.png" alt="Gala Yuzawa"/>
                 </div>
               </div>
             </li>
-            <li class="col-3-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-10">
                 <div class="cell"><img width="136" src="assets/img/tanbaralogo.png" alt="Tanbara"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
+              <div class="table wide equalElement ae-10">
+                <div class="cell"><img width="126" src="assets/img/alts_logo_2015.png" alt="Alts"/>
                 </div>
               </div>
             </li>
