--- a/index.html
+++ b/index.html
@@ -496,55 +496,55 @@
           <ul class="flex grid-68 tintLogos equal equalMobile margin-top-6">
             <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-3">
-                <div class="cell"><img width="84" src="assets/img/brand-68-audi.png" alt="Audi"/>
+                <div class="cell"><a href=""><img width="84" src="assets/img/brand-68-audi.png" alt="Audi"/></a>
                 </div>
               </div>
             </li>
             <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-4">
-                <div class="cell"><img width="96" src="assets/img/brand-68-redbull.png" alt="Redbull"/>
+                <div class="cell"><a href=""><img width="96" src="assets/img/brand-68-redbull.png" alt="Redbull"/></a>
                 </div>
               </div>
             </li>
             <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-5">
-                <div class="cell"><img width="84" src="assets/img/brand-68-intel.png" alt="Intel"/>
+                <div class="cell"><a href=""><img width="84" src="assets/img/brand-68-intel.png" alt="Intel"/></a>
                 </div>
               </div>
             </li>
             <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-6">
-                <div class="cell"><img width="126" src="assets/img/brand-68-ssf.png" alt="SwissStartupFactory"/>
+                <div class="cell"><a href="https://www.swissstartupfactory.com"><img width="126" src="assets/img/brand-68-ssf.png" alt="SwissStartupFactory"/></a>
                 </div>
               </div>
             </li>
             <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-7">
-                <div class="cell"><img width="116" src="assets/img/the_W_logo.png" alt="W hotels"/>
+                <div class="cell"><a href=""><img width="116" src="assets/img/the_W_logo.png" alt="W hotels"/></a>
                 </div>
               </div>
             </li>
             <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-8">
-                <div class="cell"><img width="146" src="assets/img/nisekologo.png" alt="Niseko Grand Hirafu"/>
+                <div class="cell"><a href="https://www.grand-hirafu.jp/winter/"><img width="146" src="assets/img/nisekologo.png" alt="Niseko Grand Hirafu"/></a>
                 </div>
               </div>
             </li>
             <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-9">
-                <div class="cell"><img width="84" src="assets/img/galalogo.png" alt="Gala Yuzawa"/>
+                <div class="cell"><a href="https://gala.co.jp/winter/"><img width="84" src="assets/img/galalogo.png" alt="Gala Yuzawa"/></a>
                 </div>
               </div>
             </li>
             <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-10">
-                <div class="cell"><img width="136" src="assets/img/tanbaralogo.png" alt="Tanbara"/>
+                <div class="cell"><a href="https://www.tambara.co.jp/winter/"><img width="136" src="assets/img/tanbaralogo.png" alt="Tambara"/></a>
                 </div>
               </div>
             </li>
             <li class="col-4-12 col-tablet-1-4 col-phablet-1-3 col-phone-1-2 margin-bottom-3">
               <div class="table wide equalElement ae-10">
-                <div class="cell"><img width="126" src="assets/img/alts_logo_2015.png" alt="Alts"/>
+                <div class="cell"><a href="https://www.alts.co.jp"><img width="126" src="assets/img/alts_logo_2015.png" alt="Alts"/></a>
                 </div>
               </div>
             </li>
