--- a/index.html
+++ b/index.html
@@ -672,8 +672,8 @@
               <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                 <ul class="p tiny">
                   <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/Artboard_12-8_2048x2048.png" height="158" alt="Mount Plate Set">
-                  <li class="opacity-8">マウントプレートセット ×2</li>
-                  <li class="opacity-8">2セット（計4枚のプレート同梱）</li>
+                  <li class="opacity-8">マウントプレートセット ×1</li>
+                  <li class="opacity-8">1セット（2枚のプレート）</li>
                 </ul>
               </div>
               <a href="https://www.amazon.co.jp/dp/B07LDHBNCL" target="_blank" class="button blue gradient wide cropSides cropBottom ae-7">Amazonで購入</a>
