Deleted yellow cookies

--- a/index.html
+++ b/index.html
@@ -632,46 +632,36 @@
         <div class="fix-12-12">
           <h1 class="ae-1">製品ラインナップ</h1>
           <ul class="grid grid-84 equal equalMobile ae-2 fromCenter">
-            <li class="col-3-12 ae-3">
+            <li class="col-4-12 ae-3">
               <h3>snowcookie<br>Swiss Black Editon</h3>
               <div class="price ae-5"><span class="currency">¥</span>51,800</div>
-              <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
+              <div class="margin-top-1 margin-bottom-1 equalElement ae-6">
                 <ul class="p tiny">
-                  <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/intheBox_all_BL@0,5x.png" height="158" alt="Swiss Black Edition">
+                  <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/intheBox_all_BL@0,5x.png" height="128" alt="Swiss Black Edition">
                   <li class="opacity-8">スマートスキーシステム<br>カラー：ブラック</li>
                 </ul>
               </div>
               <a href="https://amzn.to/2OgHsh3" target="_blank" class="button blue gradient wide cropSides cropBottom ae-7">Amazonで購入</a>
             </li>
-            <li class="col-3-12 ae-4">
-              <h3>snowcookie<br>Yellow Editon</h3>
-              <div class="price ae-6"><span class="currency">¥</span>39,800</div>
-              <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
-                <ul class="p tiny">
-                  <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/intheBox_allYEL_@0,5x.png" height="158" alt="Yellow Edition">
-                  <li class="opacity-8">スマートスキーシステム<br>カラー：イエロー</li>
-                </ul>
-              </div>
-              <a href="https://amzn.to/2A4dx2U" target="_blank" class="button blue gradient wide cropSides cropBottom ae-8">Amazonで購入</a>
-            </li>
-            <li class="col-3-12 ae-5">
+            
+            <li class="col-4-12 ae-5">
               <h3>snowcookie<br>Spare Sensor</h3>
               <div class="price ae-7"><span class="currency">¥</span>11,000</div>
-              <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
+              <div class="margin-top-1 margin-bottom-1 equalElement ae-8">
                 <ul class="p tiny">
-                  <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/spare_black-8_2048x2048.png" height="158" alt="Spare Sensor">
+                  <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/spare_black-8_2048x2048.png" height="128" alt="Spare Sensor">
                   <li class="opacity-8">センサータグ ×1</li>
-                  <li class="opacity-8">カラー：ブラック/イエロー</li>
+                  <li class="opacity-8">カラー：ブラック</li>
                 </ul>
               </div>
               <a href="https://www.amazon.co.jp/dp/B07LDG9ZN5" target="_blank" class="button blue gradient wide cropSides cropBottom ae-7">Amazonで購入</a>
             </li>
-            <li class="col-3-12 ae-5">
+            <li class="col-4-12 ae-5">
               <h3>snowcookie<br>Mount Plate Set</h3>
               <div class="price ae-7"><span class="currency">¥</span>5,500</div>
-              <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
+              <div class="margin-top-1 margin-bottom-1 equalElement ae-8">
                 <ul class="p tiny">
-                  <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/Artboard_12-8_2048x2048.png" height="158" alt="Mount Plate Set">
+                  <img class="ae-3 fromCenter margin-bottom-3 margin-top-1 done" src="assets/img/Artboard_12-8_2048x2048.png" height="128" alt="Mount Plate Set">
                   <li class="opacity-8">マウントプレートセット ×1</li>
                   <li class="opacity-8">1セット（2枚のプレート）</li>
                 </ul>
